--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,27 @@ version: '3'
 # The list of services (containers): NGINX, PHP, MySQL
 services:
   nginx:
-
-    image: nginx
+      build:
+          context: .
+          dockerfile: docker/Nginx.Dockerfile
+      ports:
+          - 8098:80
+      links:
+          - fpm
+      volumes:
+        - ./:/var/www/laravel-docker
+  fpm:
+      build:
+        context: .
+        dockerfile: docker/Fpm.Dockerfile
+      volumes:
+        - ./:/var/www/laravel-docker
+      links:
+        - mysql
+  mysql:
+    image: mysql:5.7.25
     ports:
-      - 8098:80
+      - 33061:3306
+    environment:
+      - MYSQL_ROOT_PASSWORD=200384
+      - MYSQL_DATABASE=sitemanufactura
