--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,15 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5|^8.0",
+        "ext-pdo": "*",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
         "laravel/framework": "^7.29",
+        "laravel/helpers": "^1.4",
         "laravel/tinker": "^2.5",
-        "ext-pdo": "*"
+
+        "fzaninotto/faker": "1.9.*@dev"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
