--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/helpers": "^1.4",
         "laravel/tinker": "^2.5",
 
-        "fzaninotto/faker": "1.9.*@dev"
+        "fzaninotto/faker": "1.9.*@dev",
+        "ext-json": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
