--- a/composer.json
+++ b/composer.json
@@ -9,16 +9,16 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5|^8.0",
+        "ext-json": "*",
         "ext-pdo": "*",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
+        "fzaninotto/faker": "1.9.*@dev",
         "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
         "laravel/framework": "^7.29",
         "laravel/helpers": "^1.4",
         "laravel/tinker": "^2.5",
-
-        "fzaninotto/faker": "1.9.*@dev",
-        "ext-json": "*"
+        "laravel/ui": "2.4"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
