--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.2.5|^8.0",
         "ext-json": "*",
         "ext-pdo": "*",
+        "barryvdh/laravel-ide-helper": "2.6.7",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "fzaninotto/faker": "1.9.*@dev",
