--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "ext-json": "*",
         "ext-pdo": "*",
         "barryvdh/laravel-ide-helper": "2.6.7",
+        "darkaonline/l5-swagger": "7.*",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "fzaninotto/faker": "1.9.*@dev",
